# cleora

./: .replit  Cargo.toml  package.json
benches/: cleora_benchmark.rs
src/: configuration.rs  embedding.rs  entity.rs  main.rs  persistence.rs  pipeline.rs  sparse_matrix.rs
tests/: integration_tests.rs
