[package]
name = "cleora"
version = "1.1.0"
authors = ["Piotr Babel <piotr.babel@synerise.com>", "Jacek Dabrowski <jack.dabrowski@synerise.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = """
Cleora is a general-purpose model for efficient, scalable learning of stable and inductive entity embeddings for heterogeneous relational data.
"""

[dependencies]
bus = "2.2.3"
clap = "4"
env_logger = "0.11"
fnv = "1.0.7"
log = "0.4"
memmap2 = "0.9"
rayon = "1.10"
rustc-hash = "1.1.0"
smallvec = "1.13"
twox-hash = "1.6.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "cleora_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
